[package]
name = "rust-rocket"
version = "0.7.2"
authors = ["Tim Peters <mail@darksecond.nl>", "Lauri Gustafsson <me@gustafla.space>"]
license = "MIT"
description = """
A client implementation of GNU Rocket.
"""
repository = "https://github.com/demoscene-rs/rust-rocket"
edition = "2018"

[features]
client = []

[dependencies]
byteorder = "1.4.2"
thiserror = "1.0.23"

[[example]]
name = "edit"
required-features = ["client"]

[[example]]
name = "play"
required-features = ["client"]

[package.metadata."docs.rs"]
all-features = true